--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Angular</title>
   <base href="/">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
