--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Angular</title>
+  <title>Responsive images</title>
   <base href="/">
 
   <meta name="description" content="Free image optimization online ">
