--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -12,6 +12,7 @@
 
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-dark.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel = "apple-touch-icon" href = "/assets/icons/icon-256x256.png">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XYR6R07MR4"></script>
